--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ before_script:
     - pip install python-coveralls
 install: 
     - "pip install -r requirements_dev.txt"
+    - "pip install -r requirements.txt"
     - "python setup.py install"
 script: 
     - coverage run --source slackbotframework -m py.test 
